shake animation when todo not filled on update

--- a/projects/todo list/assets/style.css
+++ b/projects/todo list/assets/style.css
@@ -135,3 +135,16 @@ i {
   color: var(--secondary);
   font-size: 1.7rem;
 }
+
+.shake {
+  animation: shake 250ms ease;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(1deg);
+  }
+  50% {
+    transform: rotate(-1deg);
+  }
+}
